--- a/partyn-frontend/package.json
+++ b/partyn-frontend/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
     "axios": "^1.7.2",
+    "classnames": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
