Integrate Firebase authentication
- Replaced custom Spring Security implementation with Firebase authentication
- Updated authentication forms to include email/password and Google sign-in options

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=Partyn-app
 
+okta.oauth2.issuer=https://dev-jiknyyowzhllm44p.eu.auth0.com/
+okta.oauth2.client-id=Ok2oaKmPOroP4cWKR5O7jLjhkDgNI9qu
+okta.oauth2.client-secret=_Ji_VpFPrF77ykMsrhf9Kkb4TJ-rVDyNk1JaayxM3T6MKpABSGKsYLxkpa2tVums
+
+# The server port configuration
+
+
 
 # Datasource Configuration for H2 Database
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
