--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 group = 'eu.partyn'
 version = '1.0.0'
-sourceCompatibility = '17'
+sourceCompatibility = '21'
 
 configurations {
 	compileOnly {
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'com.okta.spring:okta-spring-boot-starter:3.0.5'
 
 	compileOnly 'org.projectlombok:lombok'
 
