--- a/partyn-frontend/package.json
+++ b/partyn-frontend/package.json
@@ -10,15 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "@vitejs/plugin-legacy": "^5.4.1",
+    "auth0-lock": "^12.5.1",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.12.3",
     "jwt-decode": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "vite-plugin-commonjs": "^0.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
