--- a/partyn-frontend/package.json
+++ b/partyn-frontend/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.3",
+    "firebase-admin": "^12.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
