--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'org.springframework.statemachine:spring-statemachine-core:2.2.0.RELEASE'
 	implementation 'org.apache.commons:commons-csv:1.9.0'
 	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
