--- a/partyn-frontend/Dockerfile
+++ b/partyn-frontend/Dockerfile
@@ -1,14 +1,17 @@
 FROM node:16-alpine
 
 WORKDIR /app
-COPY . /app
+
+COPY package*.json ./
 
 RUN npm install
+
+COPY . .
 
 RUN npm run build
 
 RUN npm install -g serve
 
-CMD ["serve", "-s", "build"]
-
 EXPOSE 5000
+
+CMD ["serve", "-s", "dist"]
