--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,30 @@ version: '3.8'
 
 services:
   backend:
-    build: ./backend
+    build:
+      context: .
+      dockerfile: Dockerfile.backend
     ports:
       - "8080:8080"
     environment:
-      - SPRING_PROFILES_ACTIVE=prod
-      - DATABASE_URL=${DATABASE_URL}
-    depends_on:
-      - db
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+      - SPRING_DATASOURCE_USERNAME=${PGUSER}
+      - SPRING_DATASOURCE_PASSWORD=${PGPASSWORD}
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./partyn-frontend
+      dockerfile: Dockerfile.frontend
     ports:
-      - "3000:5000"
-    depends_on:
-      - backend
-
-  db:
-    image: postgres:13
+      - "5173:5173"
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: mydatabase
-    ports:
-      - "5432:5432"
+      - VITE_FIREBASE_API_KEY=${VITE_FIREBASE_API_KEY}
+      - VITE_FIREBASE_AUTH_DOMAIN=${VITE_FIREBASE_AUTH_DOMAIN}
+      - VITE_FIREBASE_PROJECT_ID=${VITE_FIREBASE_PROJECT_ID}
+      - VITE_FIREBASE_STORAGE_BUCKET=${VITE_FIREBASE_STORAGE_BUCKET}
+      - VITE_FIREBASE_MESSAGING_SENDER_ID=${VITE_FIREBASE_MESSAGING_SENDER_ID}
+      - VITE_FIREBASE_APP_ID=${VITE_FIREBASE_APP_ID}
+      - VITE_FIREBASE_MEASUREMENT_ID=${VITE_FIREBASE_MEASUREMENT_ID}
+      - VITE_FIREBASE_ADMIN_UID=${VITE_FIREBASE_ADMIN_UID}
+      - VITE_FIREBASE_DATABASE_URL=${VITE_FIREBASE_DATABASE_URL}
+      - VITE_FIREBASE_SERVICE_ACCOUNT_KEY=${VITE_FIREBASE_SERVICE_ACCOUNT_KEY}
