--- a/partyn-frontend/Dockerfile.frontend
+++ b/partyn-frontend/Dockerfile.frontend
@@ -12,6 +12,6 @@ RUN npm run build
 
 RUN npm install -g serve
 
-EXPOSE 5000
+EXPOSE 5173
 
-CMD ["serve", "-s", "dist"]
+CMD ["serve", "-s", "dist", "-l", "5173"]
