--- a/partyn-frontend/Dockerfile.frontend
+++ b/partyn-frontend/Dockerfile.frontend
@@ -1,17 +1,15 @@
-FROM node:16-alpine
-
+FROM node:16-alpine AS build
 WORKDIR /app
 
 COPY package*.json ./
-
 RUN npm install
 
 COPY . .
-
 RUN npm run build
 
-RUN npm install -g serve
+FROM nginx:alpine
+COPY --from=build /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
 
-EXPOSE 5173
-
-CMD ["serve", "-s", "dist", "-l", "5173"]
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
