Changed database configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,16 +6,15 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 
-
 # Datasource Configuration for PostgreSQL
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# H2 Console Configuration
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Additional JPA settings
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
