--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
+
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+
