connected back-end with firebase authentication and storage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=Partyn-app
 
-spring.mvc.static-path-pattern=/uploads/**
-spring.web.resources.static-locations=file:./uploads/
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
@@ -10,15 +9,20 @@ spring.servlet.multipart.max-request-size=10MB
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+
 
 # Additional JPA settings
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
-
-logging.level.com.zaxxer.hikari=DEBUG
+# Enable detailed logging for database connectivity and Hibernate
+logging.level.org.springframework.jdbc.datasource.DataSourceUtils=DEBUG
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
