--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'com.okta.spring:okta-spring-boot-starter:3.0.5'
+	implementation 'com.google.firebase:firebase-admin:9.3.0'
+	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
 
 	compileOnly 'org.projectlombok:lombok'
 
