--- a/partyn-frontend/package.json
+++ b/partyn-frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
@@ -18,13 +19,14 @@
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
-    "firebase": "^10.12.3",
+    "firebase": "^10.13.0",
     "firebase-admin": "^12.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "serve": "^14.2.3",
     "vite-plugin-commonjs": "^0.10.1"
   },
   "devDependencies": {
