--- a/build.gradle
+++ b/build.gradle
@@ -124,7 +124,7 @@ tasks.named('test') {
 }
 
 jacocoTestReport {
-	dependsOn test // tests are required to run before generating the report
+	dependsOn test
 	afterEvaluate {
 		classDirectories.setFrom(files(classDirectories.files.collect {
 			fileTree(dir: it, exclude: [
